--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "keywords": [],
   "author": "",
@@ -24,5 +25,10 @@
     "prettier": "^2.7.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "*"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.2",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0"
   }
 }
